test/error/type/err5.rzy
// fail, use procedure to index array

component
  Err5
    input
      inp();
    
    output
      out();
      
    implementation elementary
    
    var
      a : Array{10,R{0,10}} = [ 10, 9, 8, 7, 6, 5, 4, 3, 2, 1 ];
    
    function inp()
      return a[out()];
    end
    
  end

